@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6508 2009/07/17 02:49:14 brianhays Exp $
+ * $Id: ChangeLog,v 1.6509 2009/07/17 13:09:11 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2009-07-20 15:20 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
+  * source/rtl/hbxml.c
+    ! fixed identation on node write. 
+
+  * source/rtl/txml.prg
+    ! fixed to avoid write header twice. 
 
 2009-07-17 20:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * contrib/png/png.c
